wp-content/themes/sixgill/style.css
dl, dt, dd, ol, ul, li {
	margin: 0;
	padding: 0;
	font-size: 12345px;
}

.clear {
	clear: both;
	display: block;
	font-size: 0px;
	height: 0px;
	line-height: 0;
	width: 100%;
	overflow:hidden;
}

::selection {
	background: #1ABC9C;
	color: #FFF;
	text-shadow: none;
}

::-moz-selection {
	background: #1ABC9C;
	color: #FFF;
	text-shadow: none;
}

::-webkit-selection {
	background: #1ABC9C;
	color: #FFF;
	text-shadow: none;
}

:active,
:focus { outline: none !important; }


/* ----------------------------------------------------------------
	Typography
-----------------------------------------------------------------*/


body {
	line-height: 1.5;
	color: #555;
	font-family: 'Lato', sans-serif;
}

a:hover { color: #222; }

a img { border: none; }

img { max-width: 100%; }

iframe { border: none !important; }


/* ----------------------------------------------------------------
	Basic Layout Styles
-----------------------------------------------------------------*/


h1,
h2,
h3,
h4,
h5,
h6 {
	color: #444;
	font-weight: 600;
	line-height: 1.5;
	margin: 0 0 30px 0;
	font-family: 'Raleway', sans-serif;
}

h5,
h6 {
	margin-bottom: 20px;
}

h1 {
	font-size: 36px;
}

h2 {
	font-size: 30px;
}

h3 {
	font-size: 24px;
}

h4 {
	font-size: 18px;
}

h5 {
	font-size: 14px;
}

h6 { font-size: 12px; }

h4 { font-weight: 600; }

h5,
h6 {
	font-weight: bold;
}

p,
pre,
ul,
ol,
dl,
dd,
blockquote,
address,
table,
fieldset,
form {
	margin-bottom: 30px;
}

small {
	font-family: 'Lato', sans-serif;
}


/* ----------------------------------------------------------------
	Helper Classes
-----------------------------------------------------------------*/

.ohidden {
	position: relative;
	overflow: hidden !important;
}

#wrapper {
	position: relative;
	float: none;
	width: 1220px;
	margin: 0 auto;
	background-color: #FFF;
	box-shadow: 0 0 10px rgba(0,0,0,0.1);
	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.1);
	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.1);
}

.line,
.double-line {
	clear: both;
	position: relative;
	width: 100%;
	margin: 60px 0;
	border-top: 1px solid #EEE;
}

.line.line-sm { margin: 30px 0; }

span.middot {
	display: inline-block;
	margin: 0 5px;
}

.double-line {
	border-top: 3px double #E5E5E5;
}

.topmargin {
	margin-top: 50px !important;
}

.bottommargin {
	margin-bottom: 50px !important;
}

.clear-bottommargin {
	margin-bottom: -50px !important;
}

.allmargin-sm {
	margin: 30px !important;
}

.leftmargin-sm { margin-left: 30px !important; }

.rightmargin-sm { margin-right: 30px !important; }

.topmargin-sm { margin-top: 30px !important; }

.bottommargin-sm { margin-bottom: 30px !important; }

.clear-bottommargin-sm { margin-bottom: -30px !important; }

.allmargin-lg { margin: 80px !important; }

.leftmargin-lg { margin-left: 80px !important; }

.rightmargin-lg { margin-right: 80px !important; }

.topmargin-lg { margin-top: 80px !important; }

.bottommargin-lg { margin-bottom: 80px !important; }

.clear-bottommargin-lg { margin-bottom: -80px !important; }

.noleftmargin { margin-left: 0 !important; }

.norightmargin { margin-right: 0 !important; }

.header-stick { margin-top: -50px !important; }

.content-wrap .header-stick { margin-top: -80px !important; }

.footer-stick { margin-bottom: -50px !important; }

.content-wrap .footer-stick { margin-bottom: -80px !important; }

.noborder { border: none !important; }

.noleftborder { border-left: none !important; }

.norightborder { border-right: none !important; }

.notopborder { border-top: none !important; }

.nobottomborder { border-bottom: none !important; }

.noradius {
	-webkit-border-radius: 0 !important;
	-moz-border-radius: 0 !important;
	-ms-border-radius: 0 !important;
	-o-border-radius: 0 !important;
	border-radius: 0 !important;
}

.col-padding {
	padding: 60px;
}

.nopadding {
	padding: 0 !important;
}

.noabsolute {
	position: relative !important;
}

.noshadow {
	box-shadow: none !important;
}

.nothidden {
	display: block !important;
}

.inline-block {
	float: none !important;
	display: inline-block !important;
}

.divcenter {
	position: relative !important;
	float: none !important;
	margin-left: auto !important;
	margin-right: auto !important;
}

.bgcolor,
.bgcolor #header-wrap {
	background-color: #1ABC9C !important;
}

.color {
	color: #1ABC9C !important;
}

.nobg { background: none !important; }

.nobgcolor { background-color: transparent !important; }

.t300 { font-weight: 300 !important; }

.t400 { font-weight: 400 !important; }

.t500 { font-weight: 500 !important; }

.t600 { font-weight: 600 !important; }

.t700 { font-weight: 700 !important; }

.ls0 { letter-spacing: 0px !important; }

.ls1 { letter-spacing: 1px !important; }

.ls2 { letter-spacing: 2px !important; }

.ls3 { letter-spacing: 3px !important; }

.ls4 { letter-spacing: 4px !important; }

.ls5 {
	letter-spacing: 5px !important;
}

.noheight { height: 0 !important; }

.nolineheight { line-height: 0 !important; }

.font-body { font-family: 'Lato', sans-serif; }

.font-primary { font-family: 'Raleway', sans-serif; }

.font-secondary { font-family: 'Crete Round', serif; }

.bgicon {
	display: block;
	position: absolute;
	bottom: -60px;
	right: -50px;
	font-size: 210px;
	color: rgba(0,0,0,0.1);
}

.imagescale {
	display: block;
	overflow: hidden;
}

.imagescale img {
	-webkit-transform: scale(1.1);
	transform: scale(1.1);
	-webkit-transition: all 1s ease;
	transition: all 1s ease;
}

.imagescale:hover img {
	-webkit-transform: scale(1);
	transform: scale(1);
}

.grayscale {
	filter: brightness(80%) grayscale(1) contrast(90%);
	-webkit-filter: brightness(80%) grayscale(1) contrast(90%);
	-moz-filter: brightness(80%) grayscale(1) contrast(90%);
	-o-filter: brightness(80%) grayscale(1) contrast(90%);
	-ms-filter: brightness(80%) grayscale(1) contrast(90%);
	transition: 1s filter ease;
	-webkit-transition: 1s -webkit-filter ease;
	-moz-transition: 1s -moz-filter ease;
	-ms-transition: 1s -ms-filter ease;
	-o-transition: 1s -o-filter ease;
}
/* ... */

